Added 2 new styles

--- a/pages/example.html
+++ b/pages/example.html
@@ -11,11 +11,10 @@
 </head>
 <body>
 <header class="container-fluid">
-    <div class="row content-pane theme-grey">
+    <div class="row content-pane theme-grey-2">
         <a class="tab col-sm-auto p-3 text-center" href="#tab1" name="home">TAB 1</a>
         <a class="tab col-sm-auto p-3 text-center" href="#tab2" name="myOrders">TAB 2</a>
         <a class="tab col-sm-auto p-3 text-center" href="#tab3" name="myAccount">TAB 3</a>
-        <a class="tab col-sm-auto p-3 text-center" href="#tab213123123" name="myAccount">TAB 3</a>
     </div>
 </header>
 <main class="container">
